--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>Happy coding - Jekyllwind</title>
+    <title>Happy coding - Comets for Better Transit</title>
     <link rel="stylesheet" href="/cfbt-web/assets/css/main.css">
   </head>
   <body>
