--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>Happy coding - Comets for Better Transit</title>
+    <title>Home - Comets for Better Transit</title>
     <link rel="stylesheet" href="/cfbt-web/assets/css/main.css">
+    <link rel="shortcut icon" type="image/svg" href="/cfbt-web/assets/img/logo_square.svg">
   </head>
   <body>
     <div class="py-24 max-w-xl mx-auto text-center">
   <h1 class="text-xl mb-12">
     <span class="text-4xl block">
-      Jekyllwind
+        Comets for Better Transit
     </span>
 
     <span class="uppercase font-light">
