deploy: 26598254bbc477c3ec8ab395dc24cfef797ae800

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <div class="relative">
       <div class="min-h-[312px] bg-fit bg-fixed bg-no-repeat w-full" style="background-image:url('/cfbt-web/assets/img/bg.jpg')"></div>
       <div class="text-xl md:text-4xl text-center leading-snug font-mono w-fit shadow-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 mx-auto py-6 px-12 bg-black text-white">
-        UT Dallas students who want better non-car transit.
+        About Us
 
       </div>
     </div>
