--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
      <meta charset="utf-8" />
-    <title>Home - Comets for Better Transit</title>
+    <title>About - Comets for Better Transit</title>
     <link rel="stylesheet" href="/cfbt-web/assets/css/main.css" />
     <link rel="shortcut icon" type="image/svg" href="/cfbt-web/assets/img/logo_square.svg" />
   </head>
