Start about page

--- a/about.html
+++ b/about.html
@@ -5,34 +5,54 @@ banner_text: |
   About Us
 ---
 
-<p>
-    
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
-
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
-
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
-
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-
-</p>
+<div class="flex justify-center flex-wrap">
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4" />
+    <div class="text-center">
+      <div>Daniel Yahalom</div>
+      <div>President</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4" />
+    <div class="text-center">
+      <div>Chandu Garapaty</div>
+      <div>Vice President</div> 
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4" />
+    <div class="text-center">
+      <div>Devan Bailey</div>
+      <div>Secretary</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4" />
+    <div class="text-center">
+      <div>Elliot Agnew</div>
+      <div>Policy Research</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4" />
+    <div class="text-center">
+      <div>Johnathan Dang</div>
+      <div>Social Media</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4" />
+    <div class="text-center">
+      <div>Theo Henson</div>
+      <div>Website Manager</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4" />
+    <div class="text-center">
+      <div>Joaquin Moreno</div>
+      <div>Treasurer</div>
+    </div>
+  </div>
+</div>
