--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       <div class="flex w-full flex-wrap items-center justify-between px-3">
 
         <div>
-          <a class="mx-4 flex items-center justify-start text-white hover:text-neutral-900 focus:text-neutral-900 lg:mb-0 lg:mt-0" href="#">
+          <a class="mx-4 flex items-center justify-start text-white lg:mb-0 lg:mt-0" href="/cfbt-web/index.html">
             <img
               class="mr-0"
               src="/cfbt-web/assets/img/logo.svg"
@@ -25,7 +25,7 @@
           </a>
         </div>
 
-        <div id="menu" class="hidden fixed top-0 right-0 z-50 bg-black md:bg-transparent md:relative flex md:flex flex-col md:flex-row md:items-center justify-center text-xl">
+        <div id="menu" class="hidden fixed flex justify-center top-0 right-0 z-50 bg-black md:bg-transparent md:relative md:flex flex-col md:flex-row md:items-center text-xl">
  
           <div class="md:hidden z-90 fixed top-8 right-6">
             <a href="javascript:void(0)" class="text-right text-white text-4xl mr-6" onclick="toggleMenu()">&times;</a>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="flex items-center md:hidden">
-          <button class="text-white text-4xl font-bold p-4 mr-6" onclick="toggleMenu()">
+          <button class="text-white text-4xl font-bold p-4 pt-2 mr-6" onclick="toggleMenu()">
             &#9776;
           </button>
         </div> 
@@ -89,7 +89,7 @@
     </div>
 
     <footer class="bg-black text-white">
-      <div class="flex flex-col md:flex-row items-center justify-between w-1/2 mx-auto py-5">
+      <div class="flex flex-col md:flex-row items-center justify-between w-1/2 mx-auto py-5 pb-10">
         <div class="my-4">
           <a class="underline" href="mailto:bettertransit@commetsfor.org">bettertransit@commetsfor.org</a>
         </div>
