--- a/about.html
+++ b/about.html
@@ -5,51 +5,49 @@ banner_text: |
   About Us
 ---
 
+<h1 class="text-2xl text-center" >Our Officers</h1>
+
 <div class="flex justify-center flex-wrap">
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4" />
-    <div class="text-center">
-      <div>Daniel Yahalom</div>
-      <div>President</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4" />
+    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>Chandu Garapaty</div>
-      <div>Vice President</div> 
+      <div>President</div> 
+      <div>Healthcare Studies, Class of 2025</div> 
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4" />
+    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/adrian.png" | relative_url }}" />
     <div class="text-center">
-      <div>Devan Bailey</div>
+      <div>Adrian Lewis</div>
       <div>Secretary</div>
+      <div>Mechanical Engineering, Class of 2024</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4" />
+    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
-      <div>Elliot Agnew</div>
-      <div>Policy Research</div>
+      <div>William</div>
+      <div>Policy Researcher</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4" />
+    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>Johnathan Dang</div>
       <div>Social Media</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4" />
+    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/theo.png" | relative_url }}" />
     <div class="text-center">
       <div>Theo Henson</div>
       <div>Website Manager</div>
+      <div>Computer Science, Class of 2027</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4" />
+    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
