--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@ banner_text: |
 
 <h1 class="text-2xl text-center" >Our Officers</h1>
 
-<div class="flex justify-center flex-wrap">
+<div class="flex justify-center place-items-center flex-wrap">
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/chandu.jpg" | relative_url }}" />
     <div class="text-center">
       <div>Chandu Garapaty</div>
       <div>President</div> 
@@ -17,7 +17,7 @@ banner_text: |
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/adrian.png" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/adrian.png" | relative_url }}" />
     <div class="text-center">
       <div>Adrian Lewis</div>
       <div>Secretary</div>
@@ -25,21 +25,21 @@ banner_text: |
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>William</div>
       <div>Policy Researcher</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>Johnathan Dang</div>
       <div>Social Media</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/theo.png" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/theo.png" | relative_url }}" />
     <div class="text-center">
       <div>Theo Henson</div>
       <div>Website Manager</div>
@@ -47,7 +47,7 @@ banner_text: |
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
