deploy: 02c2d1e377e63bd1edf235f0ff571297b314e8db

--- a/about.html
+++ b/about.html
@@ -56,9 +56,9 @@
     <div class="max-w-[80%] mx-auto my-10 container">
       <h1 class="text-2xl text-center" >Our Officers</h1>
 
-<div class="flex justify-center flex-wrap">
+<div class="flex justify-center place-items-center flex-wrap">
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="/cfbt-web/assets/img/placeholder.svg" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/chandu.jpg" />
     <div class="text-center">
       <div>Chandu Garapaty</div>
       <div>President</div> 
@@ -66,7 +66,7 @@
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="/cfbt-web/assets/img/adrian.png" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/adrian.png" />
     <div class="text-center">
       <div>Adrian Lewis</div>
       <div>Secretary</div>
@@ -74,21 +74,21 @@
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="/cfbt-web/assets/img/placeholder.svg" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
     <div class="text-center">
       <div>William</div>
       <div>Policy Researcher</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="/cfbt-web/assets/img/placeholder.svg" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
     <div class="text-center">
       <div>Johnathan Dang</div>
       <div>Social Media</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="/cfbt-web/assets/img/theo.png" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/theo.png" />
     <div class="text-center">
       <div>Theo Henson</div>
       <div>Website Manager</div>
@@ -96,7 +96,7 @@
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto" src="/cfbt-web/assets/img/placeholder.svg" />
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
     <div class="text-center">
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
