--- a/contact.html
+++ b/contact.html
@@ -9,52 +9,55 @@
   </head>
   <body class="bg-gray-100 text-gray-800">
 
-    <nav class="relative flex w-full flex-wrap items-center justify-between bg-black py-2 text-white shadow-lg lg:py-4">
-      <div class="flex w-full flex-wrap items-center justify-between px-3">
+    <div class="flex flex-col h-screen">
 
-        <div>
-          <a class="mx-4 flex items-center justify-start text-white lg:mb-0 lg:mt-0" href="/cfbt-web/index.html">
-            <img
-              class="mr-0"
-              src="/cfbt-web/assets/img/logo.svg"
-              style="height: 50px"
-              alt="CFBT Logo"
-              loading="lazy" />
-            <i class="hidden md:inline font-medium">comets for better transit</i>
-            <i class="inline md:hidden font-medium">cfbt</i>
-          </a>
-        </div>
+      <nav class="relative flex w-full flex-wrap items-center justify-between bg-black py-2 text-white shadow-lg lg:py-4">
+        <div class="flex w-full flex-wrap items-center justify-between px-3">
 
-        <div id="menu" class="hidden fixed flex justify-center top-0 right-0 z-50 bg-black md:bg-transparent md:relative md:flex flex-col md:flex-row md:items-center text-xl">
- 
-          <div class="md:hidden z-90 fixed top-8 right-6">
-            <a href="javascript:void(0)" class="text-right text-white text-4xl mr-6" onclick="toggleMenu()">&times;</a>
+          <div>
+            <a class="mx-4 flex items-center justify-start text-white lg:mb-0 lg:mt-0" href="/cfbt-web/index.html">
+              <img
+                class="mr-0"
+                src="/cfbt-web/assets/img/logo.svg"
+                style="height: 50px"
+                alt="CFBT Logo"
+                loading="lazy" />
+              <i class="hidden md:inline font-medium">comets for better transit</i>
+              <i class="inline md:hidden font-medium">cfbt</i>
+            </a>
           </div>
 
-          <a href="/cfbt-web/index.html" class="p-4 pl-8 md:pl-4 hover:underline">Home</a>
-          <a href="/cfbt-web/about.html" class="p-4 pl-8 md:pl-4 hover:underline">About</a>
-          <a href="/cfbt-web/contact.html" class="p-4 pl-8 md:pl-4 md:mr-12 hover:underline">Contact</a>
+          <div id="menu" class="hidden fixed flex justify-center top-0 right-0 z-50 bg-black md:bg-transparent md:relative md:flex flex-col md:flex-row md:items-center text-xl">
+   
+            <div class="md:hidden z-90 fixed top-8 right-6">
+              <a href="javascript:void(0)" class="text-right text-white text-4xl mr-6" onclick="toggleMenu()">&times;</a>
+            </div>
+
+            <a href="/cfbt-web/index.html" class="p-4 pl-8 md:pl-4 hover:underline">Home</a>
+            <a href="/cfbt-web/about.html" class="p-4 pl-8 md:pl-4 hover:underline">About</a>
+            <a href="/cfbt-web/randi.html" class="p-4 pl-8 md:pl-4 hover:underline">Resources & Info</a>
+            <a href="/cfbt-web/contact.html" class="p-4 pl-8 md:pl-4 md:mr-12 hover:underline">Contact</a>
+          </div>
+
+          <div class="flex items-center md:hidden">
+            <button class="text-white text-4xl font-bold p-4 pt-2 mr-6" onclick="toggleMenu()">
+              &#9776;
+            </button>
+          </div> 
+
         </div>
+      </nav>
 
-        <div class="flex items-center md:hidden">
-          <button class="text-white text-4xl font-bold p-4 pt-2 mr-6" onclick="toggleMenu()">
-            &#9776;
-          </button>
-        </div> 
+      <div class="relative">
+        <div class="min-h-[312px] bg-fit bg-fixed 2xl:bg-cover 2xl:bg-center bg-no-repeat h-full w-full" style="background-image:url('/cfbt-web/assets/img/bg.jpg')"></div>
+        <div class="text-xl md:text-4xl text-center leading-snug font-mono w-fit shadow-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 mx-auto py-6 px-12 bg-black text-white">
+          Contact Us
 
+        </div>
       </div>
-    </nav>
 
-    <div class="relative">
-      <div class="min-h-[312px] bg-fit bg-fixed bg-no-repeat w-full" style="background-image:url('/cfbt-web/assets/img/bg.jpg')"></div>
-      <div class="text-xl md:text-4xl text-center leading-snug font-mono w-fit shadow-2xl absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 mx-auto py-6 px-12 bg-black text-white">
-        Contact Us
-
-      </div>
-    </div>
-
-    <div class="max-w-[80%] mx-auto my-10 container">
-      <p>
+      <div class="max-w-[80%] mx-auto my-10 flex-grow container">
+        <p>
     
   Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
 
@@ -86,44 +89,45 @@
 
 </p>
 
-    </div>
-
-    <footer class="bg-black text-white">
-      <div class="flex flex-col md:flex-row items-center justify-between w-1/2 mx-auto py-5 pb-10">
-        <div class="my-4">
-          <a class="underline" href="mailto:bettertransit@commetsfor.org">bettertransit@commetsfor.org</a>
-        </div>
-        <div class="flex items-center justify-center my-3">
-          <a href="https://www.instagram.com/cometsforbettertransit" class="mx-3">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-4 w-4"
-              fill="currentColor"
-              viewBox="0 0 24 24">
-              <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
-            </svg>
-          </a>
-          <a href="https://www.facebook.com/people/CometsFor-BetterTransit/pfbid02aypwNxQA9yhSLuH2RqJxA1jBkvJL9njny1b6dNbEVRb7yQaytC7DbyzN52shU2QGl/?sk=about" class="mx-3">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-4 w-4"
-              fill="currentColor"
-              viewBox="0 0 24 24">
-              <path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z" />
-            </svg>
-          </a>
-          <a href="https://twitter.com/CometsFor" class="mx-3">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-4 w-4"
-              fill="currentColor"
-              viewBox="0 0 24 24">
-              <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
-            </svg>
-          </a>
-        </div>
       </div>
-    </footer>
+
+      <footer class="bg-black text-white">
+        <div class="flex flex-col md:flex-row items-center justify-between w-1/2 mx-auto py-5 pb-10">
+          <div class="my-4">
+            <a class="underline" href="mailto:bettertransit@commetsfor.org">bettertransit@commetsfor.org</a>
+          </div>
+          <div class="flex items-center justify-center my-3">
+            <a href="https://www.instagram.com/cometsforbettertransit" class="mx-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-4 w-4"
+                fill="currentColor"
+                viewBox="0 0 24 24">
+                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
+              </svg>
+            </a>
+            <a href="https://www.facebook.com/people/CometsFor-BetterTransit/pfbid02aypwNxQA9yhSLuH2RqJxA1jBkvJL9njny1b6dNbEVRb7yQaytC7DbyzN52shU2QGl/?sk=about" class="mx-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-4 w-4"
+                fill="currentColor"
+                viewBox="0 0 24 24">
+                <path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z" />
+              </svg>
+            </a>
+            <a href="https://twitter.com/CometsFor" class="mx-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-4 w-4"
+                fill="currentColor"
+                viewBox="0 0 24 24">
+                <path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </footer>
+    </div>
     
     <script>
       var menu = document.getElementById('menu');
