Add content, edit css

--- a/about.html
+++ b/about.html
@@ -5,7 +5,25 @@ banner_text: |
   About Us
 ---
 
-<h1 class="text-2xl text-center" >Our Officers</h1>
+
+<h1 class="header" >What We Do</h1>
+
+<p class="my-4">
+
+  Founded in December 2021, we have become one of the largest activist student organizations at UT Dallas.
+  We value and advocate for the ability of students on campus and the surrounding community to get around without a car.
+  This includes public transportation such as trains and busses, pedestrian and bicycle accessibility and safety, and the urban planning that dictates how we live our lives.
+
+</p>
+
+<p class="my-4">
+
+  We frequently show up to local city council meetings, talk with officials, members of the community, and the university to voice our opinions and achieve our goals.
+  Among our accomplishments, we have fought for higher frequencies on bus routes near campus, and helped get an undeveloped lot near campus rezoned to allow for a future transit-oriented development for student housing.
+
+</p>
+
+<h1 class="header" >Our Officers</h1>
 
 <div class="flex justify-center place-items-center flex-wrap">
   <div class="flex-col items-center px-2 py-4 mx-4">
