--- a/contact.html
+++ b/contact.html
@@ -5,34 +5,12 @@ banner_text: |
   Contact Us
 ---
 
-<p>
-    
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
+<p class="my-4">
 
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
-
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
-
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
+  If you are a UT Dallas student and want to get involved, the best way is to join our Discord server, where most of our internal communication happens.
 
 </p>
+
+<div class="text-4xl bg-green-800 text-white p-8 my-4 w-full text-center hover:underline hover:cursor-pointer shadow-xl">
+  <a href="https://discord.com/invite/3mvUtGQzE3">Join our Discord</a>
+</div>
