--- a/randi.html
+++ b/randi.html
@@ -5,34 +5,25 @@ banner_text: |
   Resources and Information
 ---
 
-<p>
-    
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
+<h1 class="header">Free DART Pass for UT Dallas Students</h1>
 
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
+<p class="my-4">
 
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
+  If you are UT Dallas student and have a valid Comet Card, are registered and have paid the fees for the current semester, you can get a semester-long pass to use all of DART's public transportation for free.
 
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
+</p>
 
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
+<p class="my-4">
 
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
+  To apply, visit the <a href="https://services.utdallas.edu/tools/gopass/">UTD page to request a DART GoPass</a> and fill out the form including your NetID and password (the same as to log in to eLearning).
+  Then, download DART's GoPass app on the <a class="link" href="https://apps.apple.com/us/app/gopass/id673970506">App Store</a> or <a class="link" href="https://play.google.com/store/apps/details?id=dk.unwire.projects.dart">Google Play</a>.
+  Your pass should automatically appear in the app within a week. When asked for a ticket on a DART bus or train, simply open the app and your pass.
 
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
+</p>
 
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
-
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
+<p class="my-4">
+  
+  Physical passes can also be acquired by contacting <a class="link" href="mailto:park@utdallas.edu">park@utdallas.edu</a>.
+  UTD faculty and staff can also acquire free pass through <a class="link" href="https://services.utdallas.edu/tools/dart/">a separate form</a>.
 
 </p>
