--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-     <meta charset="utf-8" />
+    <meta charset="utf-8" />
     <title>Contact - Comets for Better Transit</title>
     <link rel="stylesheet" href="/cfbt-web/assets/css/main.css" />
     <link rel="shortcut icon" type="image/svg" href="/cfbt-web/assets/img/logo_square.svg" />
@@ -57,37 +57,15 @@
       </div>
 
       <div class="max-w-[80%] mx-auto my-10 flex-grow container">
-        <p>
-    
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
+        <p class="my-4">
 
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
-
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
-
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
-
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
-
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
-
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
+  If you are a UT Dallas student and want to get involved, the best way is to join our Discord server, where most of our internal communication happens.
 
 </p>
+
+<div class="text-4xl bg-green-800 text-white p-8 my-4 w-full text-center hover:underline hover:cursor-pointer shadow-xl">
+  <a href="https://discord.com/invite/3mvUtGQzE3">Join our Discord</a>
+</div>
 
       </div>
 
