--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,22 @@ banner_text: |
   Contact Us
 ---
 
-<p class="my-4">
+
+<p>
+
+  We encourage you to reach out if you have any questions, ideas, or want to work with us. To contact our group, email us at <a class="link" href="mailto:bettertransit@cometsfor.org">bettertransit@cometsfor.org</a>.
+
+  We are also active on <a class="link" href="https://www.instagram.com/cometsforbettertransit/">Instagram</a>.
+
+</p>
+
+
+<p>
 
   If you are a UT Dallas student and want to get involved, the best way is to join our Discord server, where most of our internal communication happens.
 
 </p>
 
-<div class="text-4xl bg-green-800 text-white p-8 my-4 w-full text-center hover:underline hover:cursor-pointer shadow-xl">
+<div class="text-4xl bg-green-800 text-white p-8 my-8 w-full text-center hover:underline hover:cursor-pointer shadow-xl">
   <a href="https://discord.com/invite/3mvUtGQzE3">Join our Discord</a>
 </div>
