deploy: 1066cd40e5debe44063d2114956f4befd21a6a76

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="max-w-[80%] mx-auto my-10 flex-grow container">
+      <div class="max-w-[80%] md:max-w-[70%] mx-auto my-10 flex-grow container">
         <p>
     
   Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
