--- a/randi.html
+++ b/randi.html
@@ -56,29 +56,83 @@
         </div>
       </div>
 
-      <div class="max-w-[80%] mx-auto my-10 flex-grow container">
+      <div class="max-w-[80%] md:max-w-[70%] mx-auto my-10 flex-grow container">
         <h1 class="header">Free DART Pass for UT Dallas Students</h1>
 
-<p class="my-4">
+<p>
 
   If you are UT Dallas student and have a valid Comet Card, are registered and have paid the fees for the current semester, you can get a semester-long pass to use all of DART's public transportation for free.
 
 </p>
 
-<p class="my-4">
+<p>
 
   To apply, visit the <a href="https://services.utdallas.edu/tools/gopass/">UTD page to request a DART GoPass</a> and fill out the form including your NetID and password (the same as to log in to eLearning).
   Then, download DART's GoPass app on the <a class="link" href="https://apps.apple.com/us/app/gopass/id673970506">App Store</a> or <a class="link" href="https://play.google.com/store/apps/details?id=dk.unwire.projects.dart">Google Play</a>.
   Your pass should automatically appear in the app within a week. When asked for a ticket on a DART bus or train, simply open the app and your pass.
+  The GoPass app is also the best way to navigate and plan trips with the DART system, with more accurate arrival times than other apps such as Google or Apple Maps.
 
 </p>
 
-<p class="my-4">
+<p>
   
   Physical passes can also be acquired by contacting <a class="link" href="mailto:park@utdallas.edu">park@utdallas.edu</a>.
-  UTD faculty and staff can also acquire free pass through <a class="link" href="https://services.utdallas.edu/tools/dart/">a separate form</a>.
+  UTD faculty and staff can also get free passes through <a class="link" href="https://services.utdallas.edu/tools/dart/">a separate form</a>.
 
 </p>
+
+
+<h1 class="header">Transit Near Campus</h1>
+
+<h4 class="subheader">Comet Cruiser</h4>
+
+<p>
+
+  The <a class="link" href="https://services.utdallas.edu/transit/cruiser/">Comet Cruiser</a> is a shuttle bus that runs a short local route without the need of any pass or ticket to board.
+  Comet Cruisers often look like regular DART busses except with different exterior branding, but sometimes they are private charter busses.
+  They run from 10am to 6pm on Sundays and 7am to 11pm on all other days, with 15 minute frequency on weekdays and 30 minutes on weekends.
+  The eastbound route runs starts from the <a class="link" href="https://map.utdallas.edu/?id=1772#!m/503632">UTD bus stop</a> (near the traffic circle by JSOM),
+  but there are also stops along Synergy Park Boulevard and Waterview Parkway, which may be closer to the dorms or apartments, respectively, if you live on campus.
+  It ends at the CityLine transit-oriented development next to the <a class="link" href="https://www.dart.org/guide/transit-and-use/rail/rail-station-detail/cityline-bush-station">CityLine/Bush Station</a>.
+  From there you can take the DART train on the Red or Orange line to reach downtown Dallas in about 40 minutes once it arrives.
+  A westbound Comet Cruiser can pick you up from CityLine to take you back to campus.
+
+</p>
+
+<h4 class="subheader">DART busses</h4>
+
+<p>
+
+  While using the Comet Cruiser, you may see (and use, provided you have your DART pass) the regular <a class="link" href="https://www.dart.org/guide/transit-and-use/bus-routes/bus-route-detail/bus-route-232-frankford">DART bus 232</a>
+  which runs a similar route near campus along Synergy Park Boulevard, ending at CityLine, but starts from much further west.
+  Another DART bus that passes campus, except along Campbell Road, is <a class="link" href="https://www.dart.org/guide/transit-and-use/bus-routes/bus-route-detail/bus-route-240-campbell">DART 240</a> which you can take south to Arapaho Road nearby a Walmart and USPS.
+  
+</p>
+
+<h4 class="subheader">Silver Line</h4>
+
+<p>
+
+  The <a class="link" href="https://www.dart.org/about/plans-projects-and-initiatives/expansion/silver-line-project">Silver Line</a>
+  is a DART train line in the process of being constructed, with service anticipated in late 2025 to mid-2026.
+  It will run east to west from Grapevine to Plano, notably with a stop right at UTD, just north of the Northside Apartments.
+  Once it is constructed, you will be able to easily get to, for example, the DFW airport in much less time than the current route (taking the train south, downtown, then northwest out to the airport) and for much less money than an Uber or Lyft.
+  You will also be able to take it east to get to CityLine/Bush quicker than the bus.
+
+</p>
+
+
+<h1 class="header">Our Discord</h1>
+
+<p>
+
+  For information, to participate in our activism, and to join a welcoming community of others who use transit in the area, join the Comets for Better Transit Discord Server with the green button below.
+
+</p>
+
+<div class="text-4xl bg-green-800 text-white p-8 my-8 w-full text-center hover:underline hover:cursor-pointer shadow-xl">
+  <a href="https://discord.com/invite/3mvUtGQzE3">Join our Discord</a>
+</div>
 
       </div>
 
