--- a/about.html
+++ b/about.html
@@ -56,10 +56,10 @@
         </div>
       </div>
 
-      <div class="max-w-[80%] mx-auto my-10 flex-grow container">
-        <h1 class="header" >What We Do</h1>
+      <div class="max-w-[80%] md:max-w-[70%] mx-auto my-10 flex-grow container">
+        <h1 class="header">What We Do</h1>
 
-<p class="my-4">
+<p>
 
   Founded in December 2021, we have become one of the largest activist student organizations at UT Dallas.
   We value and advocate for the ability of students on campus and the surrounding community to get around without a car.
@@ -67,7 +67,7 @@
 
 </p>
 
-<p class="my-4">
+<p>
 
   We frequently show up to local city council meetings, talk with officials, members of the community, and the university to voice our opinions and achieve our goals.
   Among our accomplishments, we have fought for higher frequencies on bus routes near campus, and helped get an undeveloped lot near campus rezoned to allow for a future transit-oriented development for student housing.
