--- a/index.html
+++ b/index.html
@@ -57,37 +57,102 @@
       </div>
 
       <div class="max-w-[80%] md:max-w-[70%] mx-auto my-10 flex-grow container">
-        <p>
+        <h1 class="header">Upcoming Events</h1>
+
+<p>
     
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
+<div class="flex justify-center flex-wrap">
+  <div class="flex-col text-center p-4 m-2 shadow-lg">
+    <div>
+      <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+      </svg>
 
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
+      Tuesday, Jan. 23
+    </div>
 
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
+    <div>DART Board votes on 883 frequency changes</div>
 
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
+    <div>
+      <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+        <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+      </svg>
 
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
+      6pm at DART HQ (Akard Station)
+    </div>
+  </div>
 
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
+  <div class="flex-col text-center p-4 m-2 shadow-lg">
+    <div>
+      <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+      </svg>
 
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
+      Wednesday, Jan. 24
+    </div>
 
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
+    <div>CFBT is tabling at the Spring Organization Fair</div>
 
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
-  Assumenda ut totam officia beatae. Amet enim eos veniam aut praesentium rerum. Alias ullam enim consequatur enim eaque. Atque eveniet a quis magnam ipsum tenetur qui.
+    <div>
+      <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+        <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+      </svg>
 
-  Sint modi ut excepturi quia. Ut dignissimos quia eos. Odit ut dolorem maxime corrupti.
+      1-3pm in the Visitor Center Atrium
+    </div>
+  </div>
 
-  Voluptatem ducimus ut quod. Nostrum magnam fuga suscipit sunt fuga quasi quo ullam. Magni suscipit rerum vitae delectus necessitatibus consequuntur velit deserunt.
+  <div class="flex-col text-center p-4 m-2 shadow-lg">
+    <div>
+      <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+      </svg>
 
-  Architecto officia eius minima dolorem voluptatum mollitia. Laboriosam molestias ut deserunt. Cumque quaerat excepturi est quos rem.
+      Wednesday, Jan. 24
+    </div>
 
-  Eius velit tenetur assumenda. Similique exercitationem sunt quos sint ut enim voluptatem. Placeat ullam vero ut sunt quia repellendus quibusdam ut.
+    <div>Community Silver Line meeting</div>
+
+    <div>
+      <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+        <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+      </svg>
+
+      6:30pm in the JSOM Auditorium
+    </div>
+  </div>
+
+  <div class="flex-col text-center p-4 m-2 shadow-lg">
+    <div>
+      <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
+      </svg>
+
+      Wednesday, Jan. 30
+    </div>
+
+    <div>Our first Pizzageneral of the semester! (General body club meeting with pizza provided)</div>
+
+    <div>
+      <svg class="inline" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin-map" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z"/>
+        <path fill-rule="evenodd" d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z"/>
+      </svg>
+
+      7pm in SCI 3.230
+    </div>
+  </div>
+
+</div>
 
 </p>
+
+<div class="text-4xl bg-green-800 text-white p-8 my-8 w-full text-center hover:underline hover:cursor-pointer shadow-xl">
+  <a href="https://discord.com/invite/3mvUtGQzE3">Join our Discord to stay up to date</a>
+</div>
 
       </div>
 
