--- a/about.html
+++ b/about.html
@@ -45,13 +45,6 @@ banner_text: |
   <div class="flex-col items-center px-2 py-4 mx-4">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
-      <div>William</div>
-      <div>Policy Researcher</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
-    <div class="text-center">
       <div>Johnathan Dang</div>
       <div>Social Media</div>
     </div>
@@ -62,6 +55,20 @@ banner_text: |
       <div>Theo Henson</div>
       <div>Website Manager</div>
       <div>Computer Science, Class of 2027</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <div class="text-center">
+      <div>William</div>
+      <div>Policy Researcher</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <div class="text-center">
+      <div>Liam</div>
+      <div>Discord Admin</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
