--- a/about.html
+++ b/about.html
@@ -96,13 +96,6 @@
   <div class="flex-col items-center px-2 py-4 mx-4">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>William</div>
-      <div>Policy Researcher</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
-    <div class="text-center">
       <div>Johnathan Dang</div>
       <div>Social Media</div>
     </div>
@@ -113,6 +106,20 @@
       <div>Theo Henson</div>
       <div>Website Manager</div>
       <div>Computer Science, Class of 2027</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>William</div>
+      <div>Policy Researcher</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>Liam</div>
+      <div>Discord Admin</div>
     </div>
   </div>
   <div class="flex-col items-center px-2 py-4 mx-4">
