--- a/about.html
+++ b/about.html
@@ -60,13 +60,6 @@ banner_text: |
   <div class="flex-col items-center px-2 py-4 mx-4">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
-      <div>William</div>
-      <div>Policy Researcher</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
-    <div class="text-center">
       <div>Liam</div>
       <div>Discord Admin</div>
     </div>
@@ -76,6 +69,20 @@ banner_text: |
     <div class="text-center">
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <div class="text-center">
+      <div>William</div>
+      <div>Policy Researcher</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
+    <div class="text-center">
+      <div>Robert</div>
+      <div>Policy Researcher</div>
     </div>
   </div>
 </div>
