deploy: d5c266f1315997a9827aee661b8f762cabde28ad

--- a/about.html
+++ b/about.html
@@ -111,13 +111,6 @@
   <div class="flex-col items-center px-2 py-4 mx-4">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
     <div class="text-center">
-      <div>William</div>
-      <div>Policy Researcher</div>
-    </div>
-  </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
-    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
-    <div class="text-center">
       <div>Liam</div>
       <div>Discord Admin</div>
     </div>
@@ -127,6 +120,20 @@
     <div class="text-center">
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>William</div>
+      <div>Policy Researcher</div>
+    </div>
+  </div>
+  <div class="flex-col items-center px-2 py-4 mx-4">
+    <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="/cfbt-web/assets/img/placeholder.svg" />
+    <div class="text-center">
+      <div>Robert</div>
+      <div>Policy Researcher</div>
     </div>
   </div>
 </div>
