--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ banner_text: |
 
 <p>
 
-  We encourage you to reach out if you have any questions, ideas, or want to work with us. To contact our group, email us at <a class="link" href="mailto:bettertransit@cometsfor.org">bettertransit@cometsfor.org</a>.
+  We encourage you to reach out if you have any questions, ideas, or want to work with us. To contact our group, email us at <a class="underline" href="mailto:cometsforbettertransit@gmail.com">cometsforbettertransit@gmail.com</a>.
 
   We are also active on <a class="link" href="https://www.instagram.com/cometsforbettertransit/">Instagram</a>.
 
