deploy: 0cda90eefd96a564d6e842cfd5dd3ac74aad7928

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
       <div class="max-w-[80%] md:max-w-[70%] mx-auto my-10 flex-grow container">
         <p>
 
-  We encourage you to reach out if you have any questions, ideas, or want to work with us. To contact our group, email us at <a class="link" href="mailto:bettertransit@cometsfor.org">bettertransit@cometsfor.org</a>.
+  We encourage you to reach out if you have any questions, ideas, or want to work with us. To contact our group, email us at <a class="underline" href="mailto:cometsforbettertransit@gmail.com">cometsforbettertransit@gmail.com</a>.
 
   We are also active on <a class="link" href="https://www.instagram.com/cometsforbettertransit/">Instagram</a>.
 
@@ -81,7 +81,7 @@
       <footer class="bg-black text-white">
         <div class="flex flex-col md:flex-row items-center justify-between w-1/2 mx-auto py-5 pb-10">
           <div class="my-4">
-            <a class="underline" href="mailto:bettertransit@commetsfor.org">bettertransit@commetsfor.org</a>
+            <a class="underline" href="mailto:cometsforbettertransit@gmail.com">cometsforbettertransit@gmail.com</a>
           </div>
           <div class="flex items-center justify-center my-3">
             <a href="https://www.instagram.com/cometsforbettertransit" class="mx-3">
