--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
       <footer class="bg-black text-white">
         <div class="flex flex-col md:flex-row items-center justify-between w-1/2 mx-auto py-5 pb-10">
           <div class="my-4">
-            <a class="underline" href="mailto:bettertransit@commetsfor.org">bettertransit@commetsfor.org</a>
+            <a class="underline" href="mailto:cometsforbettertransit@gmail.com">cometsforbettertransit@gmail.com</a>
           </div>
           <div class="flex items-center justify-center my-3">
             <a href="https://www.instagram.com/cometsforbettertransit" class="mx-3">
