deploy: d96ae5d467bee1fec699833a4d9f15ed8b322f8a

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
 
       <footer class="bg-black text-white">
-        <div class="flex flex-col md:flex-row items-center justify-between w-1/2 mx-auto py-5 pb-10">
+        <div class="flex flex-col md:flex-row items-center justify-between w-1/2 mx-auto pt-6">
           <div class="my-4">
             <a class="underline" href="mailto:cometsforbettertransit@gmail.com">cometsforbettertransit@gmail.com</a>
           </div>
@@ -116,6 +116,15 @@
             </a>
           </div>
         </div>
+
+        <div class="text-center max-w-[80%] md:max-w-[70%] mx-auto mt-5 mb-12 text-xs">
+          This website is published by Comets for Better Transit, a registered student organization.
+          This website is not an official publication of UT Dallas and does not represent the views of the university or its officers.
+          The University of Texas at Dallas is an Equal Opportunity/Affirmative Action University.
+          Students with disabilities needing special assistance to attend please call (972-883-2946).
+          Texas Relay Operation: 1-800-RELAYTX.
+        </div>
+
       </footer>
     </div>
     
