--- a/about.html
+++ b/about.html
@@ -11,15 +11,15 @@ banner_text: |
 <p>
 
   Founded in December 2021, we have become one of the largest activist student organizations at UT Dallas.
-  We value and advocate for the ability of students on campus and the surrounding community to get around without a car.
-  This includes public transportation such as trains and busses, pedestrian and bicycle accessibility and safety, and the urban planning that dictates how we live our lives.
+  We advocate for the ability of students on campus and the surrounding community to get around without a car.
+  This includes public transportation such as trains and busses, the safety of pedestrians and bicyclists, and the urban planning that dictates how we live our lives.
 
 </p>
 
 <p>
 
   We frequently show up to local city council meetings, talk with officials, members of the community, and the university to voice our opinions and achieve our goals.
-  Among our accomplishments, we have fought for higher frequencies on bus routes near campus, and helped get an undeveloped lot near campus rezoned to allow for a future transit-oriented development for student housing.
+  Among our accomplishments, we have fought for higher frequencies on bus routes near campus and helped get an undeveloped lot near campus rezoned to allow for a future transit-oriented housing development.
 
 </p>
 
