--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ banner_text: |
 <h1 class="header" >Our Officers</h1>
 
 <div class="flex justify-center place-items-center flex-wrap">
-  <div class="flex-col items-center px-2 py-4 mx-4">
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/chandu.jpg" | relative_url }}" />
     <div class="text-center">
       <div>Chandu Garapaty</div>
@@ -34,7 +34,7 @@ banner_text: |
       <div>Healthcare Studies, Class of 2025</div> 
     </div>
   </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/adrian.png" | relative_url }}" />
     <div class="text-center">
       <div>Adrian Lewis</div>
@@ -42,43 +42,43 @@ banner_text: |
       <div>Mechanical Engineering, Class of 2024</div>
     </div>
   </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>Johnathan Dang</div>
       <div>Social Media</div>
     </div>
   </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/theo.png" | relative_url }}" />
     <div class="text-center">
       <div>Theo Henson</div>
       <div>Website Manager</div>
-      <div>Computer Science, Class of 2027</div>
+      <div>Computer Science and Philosophy, Class of 2027</div>
     </div>
   </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>Liam</div>
       <div>Discord Admin</div>
     </div>
   </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>Joaquin Moreno</div>
       <div>Treasurer</div>
     </div>
   </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>William</div>
       <div>Policy Researcher</div>
     </div>
   </div>
-  <div class="flex-col items-center px-2 py-4 mx-4">
+  <div class="flex-col items-center px-2 py-2 mx-4 w-[270px]">
     <img class="w-[215px] h-[285px] my-4 m-auto object-cover" src="{{ "/assets/img/placeholder.svg" | relative_url }}" />
     <div class="text-center">
       <div>Robert</div>
