deploy: 704fe017b0b9d41f54c590bf8e5a61ab3eca61ba

--- a/contact.html
+++ b/contact.html
@@ -59,16 +59,20 @@
       <div class="max-w-[80%] md:max-w-[70%] mx-auto my-10 flex-grow container">
         <p>
 
-  We encourage you to reach out if you have any questions, ideas, or want to work with us. To contact our group, email us at <a class="underline" href="mailto:cometsforbettertransit@gmail.com">cometsforbettertransit@gmail.com</a>.
+  We encourage you to reach out if you have any questions, ideas, or want to work with us.
 
-  We are also active on <a class="link" href="https://www.instagram.com/cometsforbettertransit/">Instagram</a>.
+  <ul class="list-disc">
+    <li>Email us at <a class="underline" href="mailto:cometsforbettertransit@gmail.com">cometsforbettertransit@gmail.com</a>.</li>
+    <li>We are active on <a class="link" href="https://www.instagram.com/cometsforbettertransit/">Instagram</a>.</li>
+  </ul>
+
 
 </p>
 
 
 <p>
 
-  If you are a UT Dallas student and want to get involved, the best way is to join our Discord server, where most of our internal communication happens.
+  If you are a student and want to get involved, the best way is to join our Discord server, where most of our internal communication happens.
 
 </p>
 
