--- a/randi.html
+++ b/randi.html
@@ -65,17 +65,15 @@
 
 </p>
 
-<p>
-
-  To apply, visit the <a href="https://services.utdallas.edu/tools/gopass/">UTD page to request a DART GoPass</a> and fill out the form including your NetID and password (the same as to log in to eLearning).
-  Then, download DART's GoPass app on the <a class="link" href="https://apps.apple.com/us/app/gopass/id673970506">App Store</a> or <a class="link" href="https://play.google.com/store/apps/details?id=dk.unwire.projects.dart">Google Play</a>.
-  Your pass should automatically appear in the app within a week. When asked for a ticket on a DART bus or train, simply open the app and your pass.
-  The GoPass app is also the best way to navigate and plan trips with the DART system, with more accurate arrival times than other apps such as Google or Apple Maps.
-
-</p>
+<ul class="list-decimal">
+  <li>Visit the <a class="link" href="https://services.utdallas.edu/tools/gopass/">UTD page to request a DART GoPass</a> and fill out the form with your NetID and password</li>
+  <li>Download DART's GoPass app on the <a class="link" href="https://apps.apple.com/us/app/gopass/id673970506">App Store</a> or <a class="link" href="https://play.google.com/store/apps/details?id=dk.unwire.projects.dart">Google Play</a></li>
+  <li>Your pass should automatically appear in the app within a week. Show your phone when asked for a ticket on a DART bus or train</li>
+</ul>
 
 <p>
   
+  The GoPass app is also the best way to navigate and plan trips with the DART system, with more accurate arrival times than other apps such as Google or Apple Maps.
   Physical passes can also be acquired by contacting <a class="link" href="mailto:park@utdallas.edu">park@utdallas.edu</a>.
   UTD faculty and staff can also get free passes through <a class="link" href="https://services.utdallas.edu/tools/dart/">a separate form</a>.
 
@@ -86,28 +84,36 @@
 
 <h4 class="subheader">Comet Cruiser</h4>
 
+
 <p>
+  The <a class="link" href="https://services.utdallas.edu/transit/cruiser/">Comet Cruiser</a> is shuttle bus run by a partnership of UTD and DART that follows a short local route, without the need of any ticket to board.
+  Comet Cruisers often look like regular DART busses except with different exterior branding, or sometimes they are black private charter busses.
+  See Comet Cruiser map:
+</p>
 
-  The <a class="link" href="https://services.utdallas.edu/transit/cruiser/">Comet Cruiser</a> is a shuttle bus that runs a short local route without the need of any pass or ticket to board.
-  Comet Cruisers often look like regular DART busses except with different exterior branding, but sometimes they are private charter busses.
+<a href="https://services.utdallas.edu/download/Comet_Cruiser_Map.pdf">
+<img class="hover-bigger w-max lg:w-[50%] h-auto my-4 m-auto" src="/assets/img/cometcruiser.png" />
+</a>
+
+<p>
   They run from 10am to 6pm on Sundays and 7am to 11pm on all other days, with 15 minute frequency on weekdays and 30 minutes on weekends.
-  The eastbound route runs starts from the <a class="link" href="https://map.utdallas.edu/?id=1772#!m/503632">UTD bus stop</a> (near the traffic circle by JSOM),
-  but there are also stops along Synergy Park Boulevard and Waterview Parkway, which may be closer to the dorms or apartments, respectively, if you live on campus.
-  It ends at the CityLine transit-oriented development next to the <a class="link" href="https://www.dart.org/guide/transit-and-use/rail/rail-station-detail/cityline-bush-station">CityLine/Bush Station</a>.
-  From there you can take the DART train on the Red or Orange line to reach downtown Dallas in about 40 minutes once it arrives.
-  A westbound Comet Cruiser can pick you up from CityLine to take you back to campus.
-
+  The 883 East route runs starts from the <a class="link" href="https://map.utdallas.edu/?id=1772#!m/503632">UTD bus stop</a> (near the traffic circle by JSOM),
+  with stops along Synergy Park Blvd and Waterview Pkwy, closer to the dorms and apartments if you live on campus.
+  It ends at the CityLine transit-oriented development next to the <a class="link" href="https://www.dart.org/guide/transit-and-use/rail/rail-station-detail/cityline-bush-station">CityLine/Bush Station</a>. where take the DART train on the Red or Orange line to reach downtown Dallas in about 40 minutes
 </p>
 
 <h4 class="subheader">DART busses</h4>
 
 <p>
-
-  While using the Comet Cruiser, you may see (and use, provided you have your DART pass) the regular <a class="link" href="https://www.dart.org/guide/transit-and-use/bus-routes/bus-route-detail/bus-route-232-frankford">DART bus 232</a>
-  which runs a similar route near campus along Synergy Park Boulevard, ending at CityLine, but starts from much further west.
+  While using the 883 East, you'll see (and use, if you have a DART pass) the regular <a class="link" href="https://www.dart.org/guide/transit-and-use/bus-routes/bus-route-detail/bus-route-232-frankford">DART bus 232</a>
+  which runs a similar route near campus along Synergy, ending at CityLine, but starts from much further west.
   Another DART bus that passes campus, except along Campbell Road, is <a class="link" href="https://www.dart.org/guide/transit-and-use/bus-routes/bus-route-detail/bus-route-240-campbell">DART 240</a> which you can take south to Arapaho Road nearby a Walmart and USPS.
-  
+  See DART 240 map:
 </p>
+
+<a href="https://www.dart.org/trip/trip-planner/trip-planner-map?StopIdValue=&StopId=&SearchType=Route&RouteIdValue=25303&Submit=Search">
+<img class="hover-bigger w-max lg:w-[50%] h-auto my-4 m-auto" src="/assets/img/240.png" />
+</a>
 
 <h4 class="subheader">Silver Line</h4>
 
@@ -126,7 +132,7 @@
 
 <p>
 
-  For information, to participate in our activism, and to join a welcoming community of others who use transit in the area, join the Comets for Better Transit Discord Server with the green button below.
+  For information, to participate in our activism, and to join a welcoming community of others who use transit in the area, join the Comets for Better Transit Discord server.
 
 </p>
 
